# Job-Sniper

./: .env.example  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.local.json
docs/: Job-Sniper-Architecture-Updated.md
src/: .env.example  apollo.py  config.py  db.py  requirements.txt  shell.py  sniper.py  templates.py  verify.py
src/job_sniper/: __main__.py  apollo.py  cli.py  config.py  db.py  display.py  shell.py  templates.py  verify.py
src/job_sniper.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
